fix desktop-gap

--- a/v4/element/layout/class/content.css
+++ b/v4/element/layout/class/content.css
@@ -5,10 +5,6 @@
     gap: 16px;
 }
 
-[desktop-gap] {
-    padding: 5vh 10vw;
-}
-
 [center] {
     display: flex;
     justify-content: center;
@@ -17,4 +13,10 @@
 
 [center-text] {
     text-align: center;
+}
+
+@media screen and (min-width: 768px) {
+    [desktop-gap] {
+        padding: 5vh 10vw;
+    }
 }
